--- a/app/src/main/res/layout/row_recycler_item.xml
+++ b/app/src/main/res/layout/row_recycler_item.xml
@@ -38,46 +38,30 @@
             app:layout_constraintTop_toBottomOf="@+id/store_image" />
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/store_name">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_distance" />
 
             <TextView
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/store_name"
                 android:id="@+id/store_distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:text="270m"
                 android:textColor="@color/color_turquoise"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:drawablePadding="3dp"
+                app:drawableStartCompat="@drawable/ic_distance" />
 
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:gravity="center_vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/store_name">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_heart" />
 
             <TextView
+                android:drawablePadding="3dp"
+                android:gravity="center_vertical"
+                app:drawableStartCompat="@drawable/ic_heart"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/store_name"
                 android:id="@+id/store_hearts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -87,32 +71,20 @@
                 android:textColor="@color/color_pink"
                 android:textSize="14sp" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
-            android:gravity="center_vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/store_name">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_comment" />
 
             <TextView
+                android:drawablePadding="3dp"
+                app:drawableStartCompat="@drawable/ic_comment"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/store_name"
                 android:id="@+id/store_comments"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
                 android:fontFamily="@font/noto_sans_kr_medium"
-                android:text="300"
+                android:text="@{place.comment}"
                 android:textColor="@color/color_gray"
                 android:textSize="14sp" />
 
-        </LinearLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
