--- a/app/src/main/res/layout/row_recycler_item.xml
+++ b/app/src/main/res/layout/row_recycler_item.xml
@@ -38,53 +38,49 @@
             app:layout_constraintTop_toBottomOf="@+id/store_image" />
 
 
+        <TextView
+            android:id="@+id/store_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="3dp"
+            android:fontFamily="@font/noto_sans_kr_medium"
+            android:text="270m"
+            android:textColor="@color/color_turquoise"
+            android:textSize="14sp"
+            app:drawableStartCompat="@drawable/ic_distance"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/store_name" />
 
 
-            <TextView
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/store_name"
-                android:id="@+id/store_distance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/noto_sans_kr_medium"
-                android:text="270m"
-                android:textColor="@color/color_turquoise"
-                android:textSize="14sp"
-                android:drawablePadding="3dp"
-                app:drawableStartCompat="@drawable/ic_distance" />
+        <TextView
+            android:id="@+id/store_hearts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
+            android:drawablePadding="3dp"
+            android:fontFamily="@font/noto_sans_kr_medium"
+            android:gravity="center_vertical"
+            android:text="370"
+            android:textColor="@color/color_pink"
+            android:textSize="14sp"
+            app:drawableStartCompat="@drawable/ic_heart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/store_name" />
 
 
-
-            <TextView
-                android:drawablePadding="3dp"
-                android:gravity="center_vertical"
-                app:drawableStartCompat="@drawable/ic_heart"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/store_name"
-                android:id="@+id/store_hearts"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
-                android:fontFamily="@font/noto_sans_kr_medium"
-                android:text="370"
-                android:textColor="@color/color_pink"
-                android:textSize="14sp" />
-
-
-            <TextView
-                android:drawablePadding="3dp"
-                app:drawableStartCompat="@drawable/ic_comment"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/store_name"
-                android:id="@+id/store_comments"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/noto_sans_kr_medium"
-                android:text="@{place.comment}"
-                android:textColor="@color/color_gray"
-                android:textSize="14sp" />
-
+        <TextView
+            android:id="@+id/store_comments"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="3dp"
+            android:fontFamily="@font/noto_sans_kr_medium"
+            android:text="@{place.comment}"
+            android:textColor="@color/color_gray"
+            android:textSize="14sp"
+            app:drawableStartCompat="@drawable/ic_comment"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/store_name" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
