--- a/app/src/main/res/layout/row_recycler_item.xml
+++ b/app/src/main/res/layout/row_recycler_item.xml
@@ -11,14 +11,14 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/store_image"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/dummy_store"
             app:layout_constraintEnd_toEndOf="parent"
